# cv2gpukernel

./: CMakeLists.txt  README.md  cudafuncs.cu  cudafuncs.hpp  main.cpp
